Complte main page

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="description" content="Изделия из дерева,  Владивосток - контакты «   Лестницы, винтовые лестницы, изготовление лестниц, деревянная лестница, дома из бруса, деревянные дома,  баня, брус, строительство бань, деревообработка,строительство деревянных домов,  строительство домов">
+    <meta name="keywords" content="Изделия из дерева,  Владивосток - контакты « , Лестницы, винтовые лестницы, изготовление лестниц, деревянная лестница, дома из бруса, деревянные дома,  баня, брус, строительство бань, деревообработка,строительство деревянных домов,  строительство домов">
     <title>bobrs-prim</title>
   </head>
   <body>
