--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <strong>We're sorry but bobrs-prim doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
